fix: photo button z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  z-index: 1002;
+  z-index: 1001;
   background-color: #b49f6a;
   color: white;
   border: none;
